Score evaluation June 2014

--- a/homepage/input/table-solved.html
+++ b/homepage/input/table-solved.html
@@ -1,20 +1,22 @@
   <table>
-    <caption>$$Solved_Level_Statistics$$ $$May$$ 2014</caption>
+    <caption>$$Solved_Level_Statistics$$ $$June$$ 2014</caption>
     <colgroup><col width="150"><col width="80"><col width="100"><col width="80"><col width="100"><col width="80"></colgroup>
     <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$difficult$$</th><td>$$difficult_percent$$</td><th>$$easy$$</th><td>$$easy_percent$$</td></tr>
-    <tr><td class="left">dev0</td><td class="num">87.33 %</td><td class="num">2070/2400</td><td class="num">86.25 %</td><td class="num">369/373</td><td class="num">98.93 %</td></tr>
-    <tr><td class="left">Craven</td><td class="num">79.92 %</td><td class="num">1891/2400</td><td class="num">78.79 %</td><td class="num">263/373</td><td class="num">70.51 %</td></tr>
-    <tr><td class="left">daydreamer</td><td class="num">74.00 %</td><td class="num">1733/2400</td><td class="num">72.21 %</td><td class="num">333/373</td><td class="num">89.28 %</td></tr>
-    <tr><td class="left">Taztunes</td><td class="num">69.29 %</td><td class="num">1634/2400</td><td class="num">68.08 %</td><td class="num">344/373</td><td class="num">92.23 %</td></tr>
-    <tr><td class="left">Daisy</td><td class="num">68.83 %</td><td class="num">1597/2400</td><td class="num">66.54 %</td><td class="num">224/373</td><td class="num">60.05 %</td></tr>
-    <tr><td class="left">gorg</td><td class="num">58.46 %</td><td class="num">1154/2400</td><td class="num">48.08 %</td><td class="num">271/373</td><td class="num">72.65 %</td></tr>
-    <tr><td class="left">U-Punkt</td><td class="num">49.75 %</td><td class="num">1146/2400</td><td class="num">47.75 %</td><td class="num">241/373</td><td class="num">64.61 %</td></tr>
-    <tr><td class="left">Zecks</td><td class="num">44.04 %</td><td class="num">1024/2400</td><td class="num">42.67 %</td><td class="num">220/373</td><td class="num">58.98 %</td></tr>
-    <tr><td class="left">Another</td><td class="num">39.50 %</td><td class="num">920/2400</td><td class="num">38.33 %</td><td class="num">164/373</td><td class="num">43.97 %</td></tr>
-    <tr><td class="left">hadanie7</td><td class="num">33.79 %</td><td class="num">794/2400</td><td class="num">33.08 %</td><td class="num">101/373</td><td class="num">27.08 %</td></tr>
-    <tr><td class="left">Raoul</td><td class="num">30.33 %</td><td class="num">690/2400</td><td class="num">28.75 %</td><td class="num">164/373</td><td class="num">43.97 %</td></tr>
-    <tr><td class="left">maggie</td><td class="num">29.08 %</td><td class="num">476/2400</td><td class="num">19.83 %</td><td class="num">271/373</td><td class="num">72.65 %</td></tr>
-    <tr><td class="left">Mnemosyne</td><td class="num">27.88 %</td><td class="num">610/2400</td><td class="num">25.42 %</td><td class="num">130/373</td><td class="num">34.85 %</td></tr>
-    <tr><td class="left">Mark P.</td><td class="num">25.13 %</td><td class="num">539/2400</td><td class="num">22.46 %</td><td class="num">137/373</td><td class="num">36.73 %</td></tr>
-    <tr><td class="left">Chib</td><td class="num">9.04 %</td><td class="num">217/2400</td><td class="num">9.04 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
+    <tr><td class="left">dev0</td><td class="num">88.50 %</td><td class="num">2088/2400</td><td class="num">87.00 %</td><td class="num">366/373</td><td class="num">98.12 %</td></tr>
+    <tr><td class="left">Craven</td><td class="num">79.26 %</td><td class="num">1922/2400</td><td class="num">80.08 %</td><td class="num">276/373</td><td class="num">73.99 %</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">74.43 %</td><td class="num">1733/2400</td><td class="num">72.21 %</td><td class="num">331/373</td><td class="num">88.74 %</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">73.93 %</td><td class="num">1708/2400</td><td class="num">71.17 %</td><td class="num">342/373</td><td class="num">91.69 %</td></tr>
+    <tr><td class="left">Daisy</td><td class="num">62.17 %</td><td class="num">1501/2400</td><td class="num">62.54 %</td><td class="num">223/373</td><td class="num">59.79 %</td></tr>
+    <tr><td class="left">gorg</td><td class="num">51.39 %</td><td class="num">1154/2400</td><td class="num">48.08 %</td><td class="num">271/373</td><td class="num">72.65 %</td></tr>
+    <tr><td class="left">U-Punkt</td><td class="num">50.02 %</td><td class="num">1146/2400</td><td class="num">47.75 %</td><td class="num">241/373</td><td class="num">64.61 %</td></tr>
+    <tr><td class="left">Valkyrie2</td><td class="num">46.63 %</td><td class="num">1253/2400</td><td class="num">52.21 %</td><td class="num">40/373</td><td class="num">10.72 %</td></tr>
+    <tr><td class="left">Zecks</td><td class="num">44.90 %</td><td class="num">1024/2400</td><td class="num">42.67 %</td><td class="num">221/373</td><td class="num">59.25 %</td></tr>
+    <tr><td class="left">Another</td><td class="num">43.09 %</td><td class="num">1030/2400</td><td class="num">42.92 %</td><td class="num">165/373</td><td class="num">44.24 %</td></tr>
+    <tr><td class="left">Jens</td><td class="num">34.29 %</td><td class="num">735/2400</td><td class="num">30.63 %</td><td class="num">216/373</td><td class="num">57.91 %</td></tr>
+    <tr><td class="left">hadanie7</td><td class="num">32.24 %</td><td class="num">794/2400</td><td class="num">33.08 %</td><td class="num">100/373</td><td class="num">26.81 %</td></tr>
+    <tr><td class="left">Raoul</td><td class="num">30.76 %</td><td class="num">690/2400</td><td class="num">28.75 %</td><td class="num">163/373</td><td class="num">43.70 %</td></tr>
+    <tr><td class="left">maggie</td><td class="num">28.81 %</td><td class="num">511/2400</td><td class="num">21.29 %</td><td class="num">288/373</td><td class="num">77.21 %</td></tr>
+    <tr><td class="left">Mnemosyne</td><td class="num">26.69 %</td><td class="num">610/2400</td><td class="num">25.42 %</td><td class="num">130/373</td><td class="num">34.85 %</td></tr>
+    <tr><td class="left">Mark P.</td><td class="num">24.34 %</td><td class="num">539/2400</td><td class="num">22.46 %</td><td class="num">136/373</td><td class="num">36.46 %</td></tr>
+    <tr><td class="left">Chib</td><td class="num">7.83 %</td><td class="num">217/2400</td><td class="num">9.04 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
   </table>
