--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -9,12 +9,14 @@ $$names_in_use$$
     <li>dev0</li>
     <li>gorg</li>
     <li>hadanie7</li>
+    <li>Jens</li>
     <li>maggie</li>
     <li>Mark P.</li>
     <li>Mnemosyne</li>
     <li>Raoul</li>
     <li>Taztunes</li>
     <li>U-Punkt</li>
+    <li>Valkyrie2</li>
     <li>Zecks</li>
   </ul>
 </div>
