--- a/homepage/input/table-wr.html
+++ b/homepage/input/table-wr.html
@@ -1,20 +1,22 @@
   <table>
-    <caption>$$Worldrecord_Statistics$$ $$May$$ 2014</caption>
+    <caption>$$Worldrecord_Statistics$$ $$June$$ 2014</caption>
     <colgroup><col width="150"><col width="80"><col width="80"><col width="80"><col width="120"><col width="80"><col width="120"></colgroup>
     <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$shared$$</th><th>$$difficult$$</th><td>$$alone_shared$$</td><th>$$easy$$</th><td>$$alone_shared$$</td></tr>
-    <tr><td class="left">daydreamer</td><td class="num">1305</td><td class="num">182</td><td class="num">1120</td><td class="num">970 + 150</td><td class="num">185</td><td class="num">153 + 32</td></tr>
-    <tr><td class="left">dev0</td><td class="num">797</td><td class="num">131</td><td class="num">679</td><td class="num">576 + 103</td><td class="num">118</td><td class="num">90 + 28</td></tr>
-    <tr><td class="left">Craven</td><td class="num">281</td><td class="num">43</td><td class="num">261</td><td class="num">227 + 34</td><td class="num">20</td><td class="num">11 + 9</td></tr>
-    <tr><td class="left">Daisy</td><td class="num">230</td><td class="num">82</td><td class="num">194</td><td class="num">128 + 66</td><td class="num">36</td><td class="num">20 + 16</td></tr>
-    <tr><td class="left">Zecks</td><td class="num">167</td><td class="num">58</td><td class="num">129</td><td class="num">82 + 47</td><td class="num">38</td><td class="num">27 + 11</td></tr>
-    <tr><td class="left">Taztunes</td><td class="num">109</td><td class="num">18</td><td class="num">86</td><td class="num">71 + 15</td><td class="num">23</td><td class="num">20 + 3</td></tr>
-    <tr><td class="left">Another</td><td class="num">99</td><td class="num">49</td><td class="num">88</td><td class="num">47 + 41</td><td class="num">11</td><td class="num">3 + 8</td></tr>
-    <tr><td class="left">Raoul</td><td class="num">29</td><td class="num">11</td><td class="num">26</td><td class="num">16 + 10</td><td class="num">3</td><td class="num">2 + 1</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">1296</td><td class="num">183</td><td class="num">1112</td><td class="num">961 + 151</td><td class="num">184</td><td class="num">152 + 32</td></tr>
+    <tr><td class="left">dev0</td><td class="num">828</td><td class="num">150</td><td class="num">712</td><td class="num">590 + 122</td><td class="num">116</td><td class="num">88 + 28</td></tr>
+    <tr><td class="left">Craven</td><td class="num">274</td><td class="num">38</td><td class="num">254</td><td class="num">225 + 29</td><td class="num">20</td><td class="num">11 + 9</td></tr>
+    <tr><td class="left">Daisy</td><td class="num">210</td><td class="num">79</td><td class="num">175</td><td class="num">112 + 63</td><td class="num">35</td><td class="num">19 + 16</td></tr>
+    <tr><td class="left">Zecks</td><td class="num">162</td><td class="num">53</td><td class="num">124</td><td class="num">82 + 42</td><td class="num">38</td><td class="num">27 + 11</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">118</td><td class="num">19</td><td class="num">95</td><td class="num">79 + 16</td><td class="num">23</td><td class="num">20 + 3</td></tr>
+    <tr><td class="left">Another</td><td class="num">101</td><td class="num">45</td><td class="num">90</td><td class="num">53 + 37</td><td class="num">11</td><td class="num">3 + 8</td></tr>
+    <tr><td class="left">Raoul</td><td class="num">27</td><td class="num">10</td><td class="num">25</td><td class="num">16 + 9</td><td class="num">2</td><td class="num">1 + 1</td></tr>
     <tr><td class="left">U-Punkt</td><td class="num">21</td><td class="num">4</td><td class="num">14</td><td class="num">10 + 4</td><td class="num">7</td><td class="num">7 + 0</td></tr>
-    <tr><td class="left">hadanie7</td><td class="num">10</td><td class="num">5</td><td class="num">9</td><td class="num">5 + 4</td><td class="num">1</td><td class="num">0 + 1</td></tr>
+    <tr><td class="left">hadanie7</td><td class="num">9</td><td class="num">4</td><td class="num">8</td><td class="num">5 + 3</td><td class="num">1</td><td class="num">0 + 1</td></tr>
+    <tr><td class="left">gorg</td><td class="num">4</td><td class="num">2</td><td class="num">2</td><td class="num">1 + 1</td><td class="num">2</td><td class="num">1 + 1</td></tr>
     <tr><td class="left">Chib</td><td class="num">3</td><td class="num">1</td><td class="num">3</td><td class="num">2 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
-    <tr><td class="left">gorg</td><td class="num">3</td><td class="num">1</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">2</td><td class="num">1 + 1</td></tr>
-    <tr><td class="left">maggie</td><td class="num">2</td><td class="num">2</td><td class="num">2</td><td class="num">0 + 2</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">Jens</td><td class="num">2</td><td class="num">0</td><td class="num">2</td><td class="num">2 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Mnemosyne</td><td class="num">2</td><td class="num">0</td><td class="num">2</td><td class="num">2 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">maggie</td><td class="num">2</td><td class="num">2</td><td class="num">2</td><td class="num">0 + 2</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">Valkyrie2</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Mark P.</td><td class="num">1</td><td class="num">1</td><td class="num">1</td><td class="num">0 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
   </table>
