--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -1,6 +1,7 @@
 <div class="usernames">
 $$names_in_use$$
   <ul>
+    <li>Angolino</li>
     <li>Another</li>
     <li>Chib</li>
     <li>Craven</li>
@@ -12,6 +13,7 @@ $$names_in_use$$
     <li>Jens</li>
     <li>maggie</li>
     <li>Mark P.</li>
+    <li>Medimaster</li>
     <li>Mnemosyne</li>
     <li>Raoul</li>
     <li>Taztunes</li>
