score evaluation August 2014

--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -1,6 +1,7 @@
 <div class="usernames">
 $$names_in_use$$
   <ul>
+    <li>Ale</li>
     <li>Angolino</li>
     <li>Another</li>
     <li>Chib</li>
@@ -9,6 +10,7 @@ $$names_in_use$$
     <li>daydreamer</li>
     <li>dev0</li>
     <li>gorg</li>
+    <li>grimes</li>
     <li>hadanie7</li>
     <li>Jens</li>
     <li>maggie</li>
