--- a/homepage/input/table-rat.html
+++ b/homepage/input/table-rat.html
@@ -1,18 +1,20 @@
   <table>
-    <caption>$$Rating_Statistics$$ $$July$$ 2014</caption>
+    <caption>$$Rating_Statistics$$ $$August$$ 2014</caption>
     <colgroup><col width="180"><col width="80"><col width="120"><col width="80"></colgroup>
     <tr><th>$$user$$</th><th>$$count$$</th><td>$$count_percent$$</td><th>$$average$$</th></tr>
-    <tr><td class="left">dev0</td><td class="num">1773/2400</td><td class="num">73.88 %</td><td class="num">4.27</td></tr>
+    <tr><td class="left">dev0</td><td class="num">1776/2400</td><td class="num">74.00 %</td><td class="num">4.28</td></tr>
     <tr><td class="left">Taztunes</td><td class="num">1434/2400</td><td class="num">59.75 %</td><td class="num">4.8</td></tr>
     <tr><td class="left">daydreamer</td><td class="num">1076/2400</td><td class="num">44.83 %</td><td class="num">4.71</td></tr>
     <tr><td class="left">Another</td><td class="num">980/2400</td><td class="num">40.83 %</td><td class="num">5.35</td></tr>
-    <tr><td class="left">U-Punkt</td><td class="num">882/2400</td><td class="num">36.75 %</td><td class="num">5.11</td></tr>
+    <tr><td class="left">U-Punkt</td><td class="num">884/2400</td><td class="num">36.83 %</td><td class="num">5.12</td></tr>
     <tr><td class="left">gorg</td><td class="num">764/2400</td><td class="num">31.83 %</td><td class="num">5.01</td></tr>
     <tr><td class="left">maggie</td><td class="num">513/2400</td><td class="num">21.38 %</td><td class="num">4.75</td></tr>
+    <tr><td class="left">Medimaster</td><td class="num">206/2400</td><td class="num">8.58 %</td><td class="num">4.81</td></tr>
     <tr><td class="left">Craven</td><td class="num">180/2400</td><td class="num">7.50 %</td><td class="num">4.45</td></tr>
-    <tr><td class="left">Medimaster</td><td class="num">165/2400</td><td class="num">6.88 %</td><td class="num">4.71</td></tr>
     <tr><td class="left">Raoul</td><td class="num">151/2400</td><td class="num">6.29 %</td><td class="num">5.39</td></tr>
+    <tr><td class="left">Angolino</td><td class="num">145/2400</td><td class="num">6.04 %</td><td class="num">4.98</td></tr>
     <tr><td class="left">Angolino</td><td class="num">145/2400</td><td class="num">6.04 %</td><td class="num">4.98</td></tr>
     <tr><td class="left">Mark P.</td><td class="num">64/2400</td><td class="num">2.67 %</td><td class="num">4.92</td></tr>
     <tr><td class="left">Zecks</td><td class="num">37/2400</td><td class="num">1.54 %</td><td class="num">4.35</td></tr>
+    <tr><td class="left">Ale</td><td class="num">36/2400</td><td class="num">1.50 %</td><td class="num">6.17</td></tr>
   </table>
