score evaluation (September 2014)

--- a/homepage/input/table-solved.html
+++ b/homepage/input/table-solved.html
@@ -1,27 +1,27 @@
   <table>
-    <caption>$$Solved_Level_Statistics$$ $$August$$ 2014</caption>
+    <caption>$$Solved_Level_Statistics$$ $$September$$ 2014</caption>
     <colgroup><col width="150"><col width="80"><col width="100"><col width="80"><col width="100"><col width="80"></colgroup>
     <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$difficult$$</th><td>$$difficult_percent$$</td><th>$$easy$$</th><td>$$easy_percent$$</td></tr>
     <tr><td class="left">dev0</td><td class="num">88.64 %</td><td class="num">2092/2400</td><td class="num">87.17 %</td><td class="num">366/373</td><td class="num">98.12 %</td></tr>
-    <tr><td class="left">Craven</td><td class="num">82.04 %</td><td class="num">1971/2400</td><td class="num">82.13 %</td><td class="num">304/373</td><td class="num">81.50 %</td></tr>
+    <tr><td class="left">Craven</td><td class="num">86.98 %</td><td class="num">2088/2400</td><td class="num">87.00 %</td><td class="num">324/373</td><td class="num">86.86 %</td></tr>
     <tr><td class="left">Taztunes</td><td class="num">74.54 %</td><td class="num">1722/2400</td><td class="num">71.75 %</td><td class="num">345/373</td><td class="num">92.49 %</td></tr>
     <tr><td class="left">daydreamer</td><td class="num">74.43 %</td><td class="num">1733/2400</td><td class="num">72.21 %</td><td class="num">331/373</td><td class="num">88.74 %</td></tr>
     <tr><td class="left">Daisy</td><td class="num">68.66 %</td><td class="num">1681/2400</td><td class="num">70.04 %</td><td class="num">223/373</td><td class="num">59.79 %</td></tr>
+    <tr><td class="left">H-J.Epting</td><td class="num">59.25 %</td><td class="num">1348/2400</td><td class="num">56.17 %</td><td class="num">295/373</td><td class="num">79.09 %</td></tr>
     <tr><td class="left">gorg</td><td class="num">51.39 %</td><td class="num">1154/2400</td><td class="num">48.08 %</td><td class="num">271/373</td><td class="num">72.65 %</td></tr>
-    <tr><td class="left">U-Punkt</td><td class="num">50.13 %</td><td class="num">1148/2400</td><td class="num">47.83 %</td><td class="num">242/373</td><td class="num">64.88 %</td></tr>
+    <tr><td class="left">U-Punkt</td><td class="num">50.16 %</td><td class="num">1149/2400</td><td class="num">47.88 %</td><td class="num">242/373</td><td class="num">64.88 %</td></tr>
+    <tr><td class="left">Medimaster</td><td class="num">49.73 %</td><td class="num">1151/2400</td><td class="num">47.96 %</td><td class="num">228/373</td><td class="num">61.13 %</td></tr>
+    <tr><td class="left">Ale</td><td class="num">49.04 %</td><td class="num">1081/2400</td><td class="num">45.04 %</td><td class="num">279/373</td><td class="num">74.80 %</td></tr>
     <tr><td class="left">Valkyrie2</td><td class="num">46.63 %</td><td class="num">1253/2400</td><td class="num">52.21 %</td><td class="num">40/373</td><td class="num">10.72 %</td></tr>
-    <tr><td class="left">Ale</td><td class="num">45.04 %</td><td class="num">977/2400</td><td class="num">40.71 %</td><td class="num">272/373</td><td class="num">72.92 %</td></tr>
     <tr><td class="left">Zecks</td><td class="num">44.90 %</td><td class="num">1024/2400</td><td class="num">42.67 %</td><td class="num">221/373</td><td class="num">59.25 %</td></tr>
     <tr><td class="left">Another</td><td class="num">43.09 %</td><td class="num">1030/2400</td><td class="num">42.92 %</td><td class="num">165/373</td><td class="num">44.24 %</td></tr>
-    <tr><td class="left">Medimaster</td><td class="num">42.52 %</td><td class="num">978/2400</td><td class="num">40.75 %</td><td class="num">201/373</td><td class="num">53.89 %</td></tr>
     <tr><td class="left">Jens</td><td class="num">34.29 %</td><td class="num">735/2400</td><td class="num">30.63 %</td><td class="num">216/373</td><td class="num">57.91 %</td></tr>
     <tr><td class="left">hadanie7</td><td class="num">32.24 %</td><td class="num">794/2400</td><td class="num">33.08 %</td><td class="num">100/373</td><td class="num">26.81 %</td></tr>
     <tr><td class="left">Raoul</td><td class="num">30.76 %</td><td class="num">690/2400</td><td class="num">28.75 %</td><td class="num">163/373</td><td class="num">43.70 %</td></tr>
-    <tr><td class="left">maggie</td><td class="num">29.75 %</td><td class="num">534/2400</td><td class="num">22.25 %</td><td class="num">291/373</td><td class="num">78.02 %</td></tr>
+    <tr><td class="left">maggie</td><td class="num">30.22 %</td><td class="num">544/2400</td><td class="num">22.67 %</td><td class="num">294/373</td><td class="num">78.82 %</td></tr>
     <tr><td class="left">Mnemosyne</td><td class="num">26.69 %</td><td class="num">610/2400</td><td class="num">25.42 %</td><td class="num">130/373</td><td class="num">34.85 %</td></tr>
     <tr><td class="left">Angolino</td><td class="num">26.14 %</td><td class="num">601/2400</td><td class="num">25.04 %</td><td class="num">124/373</td><td class="num">33.24 %</td></tr>
-    <tr><td class="left">Angolino</td><td class="num">26.14 %</td><td class="num">601/2400</td><td class="num">25.04 %</td><td class="num">124/373</td><td class="num">33.24 %</td></tr>
     <tr><td class="left">Mark P.</td><td class="num">24.34 %</td><td class="num">539/2400</td><td class="num">22.46 %</td><td class="num">136/373</td><td class="num">36.46 %</td></tr>
-    <tr><td class="left">grimes</td><td class="num">9.05 %</td><td class="num">251/2400</td><td class="num">10.46 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
+    <tr><td class="left">grimes</td><td class="num">11.07 %</td><td class="num">307/2400</td><td class="num">12.79 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
     <tr><td class="left">Chib</td><td class="num">7.83 %</td><td class="num">217/2400</td><td class="num">9.04 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
   </table>
