--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -11,6 +11,7 @@ $$names_in_use$$
     <li>dev0</li>
     <li>gorg</li>
     <li>grimes</li>
+    <li>H-J.Epting</li>
     <li>hadanie7</li>
     <li>Jens</li>
     <li>maggie</li>
