--- a/homepage/input/table-wr.html
+++ b/homepage/input/table-wr.html
@@ -1,20 +1,21 @@
   <table>
-    <caption>$$Worldrecord_Statistics$$ $$August$$ 2014</caption>
+    <caption>$$Worldrecord_Statistics$$ $$September$$ 2014</caption>
     <colgroup><col width="150"><col width="80"><col width="80"><col width="80"><col width="120"><col width="80"><col width="120"></colgroup>
     <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$shared$$</th><th>$$difficult$$</th><td>$$alone_shared$$</td><th>$$easy$$</th><td>$$alone_shared$$</td></tr>
-    <tr><td class="left">Medimaster</td><td class="num">1133</td><td class="num">137</td><td class="num">943</td><td class="num">831 + 112</td><td class="num">190</td><td class="num">165 + 25</td></tr>
-    <tr><td class="left">dev0</td><td class="num">659</td><td class="num">90</td><td class="num">581</td><td class="num">507 + 74</td><td class="num">78</td><td class="num">62 + 16</td></tr>
-    <tr><td class="left">daydreamer</td><td class="num">631</td><td class="num">108</td><td class="num">551</td><td class="num">462 + 89</td><td class="num">80</td><td class="num">61 + 19</td></tr>
-    <tr><td class="left">Craven</td><td class="num">211</td><td class="num">25</td><td class="num">199</td><td class="num">178 + 21</td><td class="num">12</td><td class="num">8 + 4</td></tr>
-    <tr><td class="left">Daisy</td><td class="num">113</td><td class="num">45</td><td class="num">96</td><td class="num">61 + 35</td><td class="num">17</td><td class="num">7 + 10</td></tr>
-    <tr><td class="left">Taztunes</td><td class="num">93</td><td class="num">13</td><td class="num">75</td><td class="num">64 + 11</td><td class="num">18</td><td class="num">16 + 2</td></tr>
-    <tr><td class="left">Angolino</td><td class="num">86</td><td class="num">69</td><td class="num">67</td><td class="num">14 + 53</td><td class="num">19</td><td class="num">3 + 16</td></tr>
-    <tr><td class="left">Zecks</td><td class="num">65</td><td class="num">23</td><td class="num">50</td><td class="num">31 + 19</td><td class="num">15</td><td class="num">11 + 4</td></tr>
-    <tr><td class="left">Another</td><td class="num">37</td><td class="num">29</td><td class="num">32</td><td class="num">8 + 24</td><td class="num">5</td><td class="num">0 + 5</td></tr>
-    <tr><td class="left">U-Punkt</td><td class="num">16</td><td class="num">3</td><td class="num">10</td><td class="num">7 + 3</td><td class="num">6</td><td class="num">6 + 0</td></tr>
-    <tr><td class="left">Raoul</td><td class="num">11</td><td class="num">3</td><td class="num">10</td><td class="num">7 + 3</td><td class="num">1</td><td class="num">1 + 0</td></tr>
-    <tr><td class="left">Ale</td><td class="num">10</td><td class="num">0</td><td class="num">8</td><td class="num">8 + 0</td><td class="num">2</td><td class="num">2 + 0</td></tr>
-    <tr><td class="left">hadanie7</td><td class="num">5</td><td class="num">2</td><td class="num">5</td><td class="num">3 + 2</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">Medimaster</td><td class="num">1344</td><td class="num">144</td><td class="num">1124</td><td class="num">1005 + 119</td><td class="num">220</td><td class="num">195 + 25</td></tr>
+    <tr><td class="left">dev0</td><td class="num">604</td><td class="num">85</td><td class="num">533</td><td class="num">464 + 69</td><td class="num">71</td><td class="num">55 + 16</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">511</td><td class="num">104</td><td class="num">447</td><td class="num">362 + 85</td><td class="num">64</td><td class="num">45 + 19</td></tr>
+    <tr><td class="left">Craven</td><td class="num">237</td><td class="num">23</td><td class="num">228</td><td class="num">209 + 19</td><td class="num">9</td><td class="num">5 + 4</td></tr>
+    <tr><td class="left">Daisy</td><td class="num">106</td><td class="num">46</td><td class="num">90</td><td class="num">54 + 36</td><td class="num">16</td><td class="num">6 + 10</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">87</td><td class="num">13</td><td class="num">69</td><td class="num">58 + 11</td><td class="num">18</td><td class="num">16 + 2</td></tr>
+    <tr><td class="left">Angolino</td><td class="num">81</td><td class="num">71</td><td class="num">63</td><td class="num">8 + 55</td><td class="num">18</td><td class="num">2 + 16</td></tr>
+    <tr><td class="left">Zecks</td><td class="num">51</td><td class="num">23</td><td class="num">38</td><td class="num">19 + 19</td><td class="num">13</td><td class="num">9 + 4</td></tr>
+    <tr><td class="left">H-J.Epting</td><td class="num">32</td><td class="num">29</td><td class="num">26</td><td class="num">2 + 24</td><td class="num">6</td><td class="num">1 + 5</td></tr>
+    <tr><td class="left">Another</td><td class="num">31</td><td class="num">28</td><td class="num">26</td><td class="num">3 + 23</td><td class="num">5</td><td class="num">0 + 5</td></tr>
+    <tr><td class="left">U-Punkt</td><td class="num">14</td><td class="num">3</td><td class="num">9</td><td class="num">6 + 3</td><td class="num">5</td><td class="num">5 + 0</td></tr>
+    <tr><td class="left">Ale</td><td class="num">13</td><td class="num">0</td><td class="num">11</td><td class="num">11 + 0</td><td class="num">2</td><td class="num">2 + 0</td></tr>
+    <tr><td class="left">Raoul</td><td class="num">10</td><td class="num">3</td><td class="num">9</td><td class="num">6 + 3</td><td class="num">1</td><td class="num">1 + 0</td></tr>
+    <tr><td class="left">hadanie7</td><td class="num">4</td><td class="num">1</td><td class="num">4</td><td class="num">3 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Chib</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">gorg</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Jens</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
