Update email address for score submit

--- a/homepage/input/support_de.html
+++ b/homepage/input/support_de.html
@@ -168,7 +168,7 @@ und Ihre Bewertungen bestimmen den Level des Monats mit.</p>
   die Datei &quot;enigma.score&quot;. Sie befindet sich in Ihrem
   &quot;Userpfad&quot;, der Ihnen von Enigma angezeigt wird, wenn Sie im
   Hauptmen&uuml; F2 dr&uuml;cken. Bitte senden Sie uns diese einzelne Datei an
-  <a href="mailto:enigma.score@grounder.net">enigma.score@grounder.net</a>
+  <a href="mailto:enigma.score@go4more.de">enigma.score@go4more.de</a>
   mit dem Betreff &quot;score - Spielername&quot; (ersetzen Sie dabei
   &quot;Spielername&quot; gegen den von Ihnen gew&auml;hlten Namen!).</p>
 
