--- a/homepage/input/support_ru.html
+++ b/homepage/input/support_ru.html
@@ -152,7 +152,7 @@
   <p>Для регистрации Ваших очков, просто пришлите нам Ваш файл 'enigma.score'.
   Он находится в Вашем 'пути пользователя', который Enigma показывает при нажатии
   в главном меню клавиши F2. Пожалуйста пришлите только этот файл на
-  <a href="mailto:enigma.score@grounder.net">enigma.score@grounder.net</a>
+  <a href="mailto:enigma.score@go4more.de">enigma.score@go4more.de</a>
   с темой 'score - имя_пользователя' (замените 'имя_пользователя', выбранным Вами
   именем!).</p>
 
