score evaluation october 2014

--- a/homepage/input/table-wr.html
+++ b/homepage/input/table-wr.html
@@ -1,24 +1,23 @@
   <table>
-    <caption>$$Worldrecord_Statistics$$ $$September$$ 2014</caption>
+    <caption>$$Worldrecord_Statistics$$ $$October$$ 2014</caption>
     <colgroup><col width="150"><col width="80"><col width="80"><col width="80"><col width="120"><col width="80"><col width="120"></colgroup>
     <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$shared$$</th><th>$$difficult$$</th><td>$$alone_shared$$</td><th>$$easy$$</th><td>$$alone_shared$$</td></tr>
-    <tr><td class="left">Medimaster</td><td class="num">1344</td><td class="num">144</td><td class="num">1124</td><td class="num">1005 + 119</td><td class="num">220</td><td class="num">195 + 25</td></tr>
-    <tr><td class="left">dev0</td><td class="num">604</td><td class="num">85</td><td class="num">533</td><td class="num">464 + 69</td><td class="num">71</td><td class="num">55 + 16</td></tr>
-    <tr><td class="left">daydreamer</td><td class="num">511</td><td class="num">104</td><td class="num">447</td><td class="num">362 + 85</td><td class="num">64</td><td class="num">45 + 19</td></tr>
-    <tr><td class="left">Craven</td><td class="num">237</td><td class="num">23</td><td class="num">228</td><td class="num">209 + 19</td><td class="num">9</td><td class="num">5 + 4</td></tr>
-    <tr><td class="left">Daisy</td><td class="num">106</td><td class="num">46</td><td class="num">90</td><td class="num">54 + 36</td><td class="num">16</td><td class="num">6 + 10</td></tr>
-    <tr><td class="left">Taztunes</td><td class="num">87</td><td class="num">13</td><td class="num">69</td><td class="num">58 + 11</td><td class="num">18</td><td class="num">16 + 2</td></tr>
+    <tr><td class="left">Medimaster</td><td class="num">1340</td><td class="num">146</td><td class="num">1121</td><td class="num">1001 + 120</td><td class="num">219</td><td class="num">193 + 26</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">728</td><td class="num">118</td><td class="num">664</td><td class="num">566 + 98</td><td class="num">64</td><td class="num">44 + 20</td></tr>
+    <tr><td class="left">dev0</td><td class="num">524</td><td class="num">89</td><td class="num">453</td><td class="num">380 + 73</td><td class="num">71</td><td class="num">55 + 16</td></tr>
+    <tr><td class="left">Craven</td><td class="num">148</td><td class="num">20</td><td class="num">139</td><td class="num">123 + 16</td><td class="num">9</td><td class="num">5 + 4</td></tr>
+    <tr><td class="left">Daisy</td><td class="num">90</td><td class="num">45</td><td class="num">74</td><td class="num">39 + 35</td><td class="num">16</td><td class="num">6 + 10</td></tr>
     <tr><td class="left">Angolino</td><td class="num">81</td><td class="num">71</td><td class="num">63</td><td class="num">8 + 55</td><td class="num">18</td><td class="num">2 + 16</td></tr>
-    <tr><td class="left">Zecks</td><td class="num">51</td><td class="num">23</td><td class="num">38</td><td class="num">19 + 19</td><td class="num">13</td><td class="num">9 + 4</td></tr>
-    <tr><td class="left">H-J.Epting</td><td class="num">32</td><td class="num">29</td><td class="num">26</td><td class="num">2 + 24</td><td class="num">6</td><td class="num">1 + 5</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">68</td><td class="num">9</td><td class="num">48</td><td class="num">41 + 7</td><td class="num">20</td><td class="num">18 + 2</td></tr>
+    <tr><td class="left">Zecks</td><td class="num">50</td><td class="num">23</td><td class="num">37</td><td class="num">18 + 19</td><td class="num">13</td><td class="num">9 + 4</td></tr>
+    <tr><td class="left">H-J.Epting</td><td class="num">36</td><td class="num">29</td><td class="num">30</td><td class="num">6 + 24</td><td class="num">6</td><td class="num">1 + 5</td></tr>
     <tr><td class="left">Another</td><td class="num">31</td><td class="num">28</td><td class="num">26</td><td class="num">3 + 23</td><td class="num">5</td><td class="num">0 + 5</td></tr>
     <tr><td class="left">U-Punkt</td><td class="num">14</td><td class="num">3</td><td class="num">9</td><td class="num">6 + 3</td><td class="num">5</td><td class="num">5 + 0</td></tr>
-    <tr><td class="left">Ale</td><td class="num">13</td><td class="num">0</td><td class="num">11</td><td class="num">11 + 0</td><td class="num">2</td><td class="num">2 + 0</td></tr>
+    <tr><td class="left">Ale</td><td class="num">12</td><td class="num">0</td><td class="num">10</td><td class="num">10 + 0</td><td class="num">2</td><td class="num">2 + 0</td></tr>
     <tr><td class="left">Raoul</td><td class="num">10</td><td class="num">3</td><td class="num">9</td><td class="num">6 + 3</td><td class="num">1</td><td class="num">1 + 0</td></tr>
     <tr><td class="left">hadanie7</td><td class="num">4</td><td class="num">1</td><td class="num">4</td><td class="num">3 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">Velstadt</td><td class="num">3</td><td class="num">3</td><td class="num">3</td><td class="num">0 + 3</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Chib</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
-    <tr><td class="left">gorg</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
-    <tr><td class="left">Jens</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Valkyrie2</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Mark P.</td><td class="num">1</td><td class="num">1</td><td class="num">1</td><td class="num">0 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
   </table>
