--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -4,6 +4,7 @@ $$names_in_use$$
     <li>Ale</li>
     <li>Angolino</li>
     <li>Another</li>
+    <li>BigSlick</li>
     <li>Chib</li>
     <li>Craven</li>
     <li>Daisy</li>
@@ -22,6 +23,7 @@ $$names_in_use$$
     <li>Taztunes</li>
     <li>U-Punkt</li>
     <li>Valkyrie2</li>
+    <li>Velstadt</li>
     <li>Zecks</li>
   </ul>
 </div>
