--- a/homepage/input/table-rat.html
+++ b/homepage/input/table-rat.html
@@ -1,14 +1,14 @@
   <table>
-    <caption>$$Rating_Statistics$$ $$September$$ 2014</caption>
+    <caption>$$Rating_Statistics$$ $$October$$ 2014</caption>
     <colgroup><col width="180"><col width="80"><col width="120"><col width="80"></colgroup>
     <tr><th>$$user$$</th><th>$$count$$</th><td>$$count_percent$$</td><th>$$average$$</th></tr>
-    <tr><td class="left">dev0</td><td class="num">1776/2400</td><td class="num">74.00 %</td><td class="num">4.28</td></tr>
-    <tr><td class="left">Taztunes</td><td class="num">1434/2400</td><td class="num">59.75 %</td><td class="num">4.8</td></tr>
-    <tr><td class="left">daydreamer</td><td class="num">1076/2400</td><td class="num">44.83 %</td><td class="num">4.71</td></tr>
+    <tr><td class="left">dev0</td><td class="num">1811/2400</td><td class="num">75.46 %</td><td class="num">4.31</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">1523/2400</td><td class="num">63.46 %</td><td class="num">4.84</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">1078/2400</td><td class="num">44.92 %</td><td class="num">4.71</td></tr>
     <tr><td class="left">Another</td><td class="num">980/2400</td><td class="num">40.83 %</td><td class="num">5.35</td></tr>
-    <tr><td class="left">U-Punkt</td><td class="num">885/2400</td><td class="num">36.88 %</td><td class="num">5.12</td></tr>
+    <tr><td class="left">U-Punkt</td><td class="num">887/2400</td><td class="num">36.96 %</td><td class="num">5.12</td></tr>
     <tr><td class="left">gorg</td><td class="num">764/2400</td><td class="num">31.83 %</td><td class="num">5.01</td></tr>
-    <tr><td class="left">maggie</td><td class="num">523/2400</td><td class="num">21.79 %</td><td class="num">4.75</td></tr>
+    <tr><td class="left">maggie</td><td class="num">568/2400</td><td class="num">23.67 %</td><td class="num">4.75</td></tr>
     <tr><td class="left">Medimaster</td><td class="num">413/2400</td><td class="num">17.21 %</td><td class="num">4.85</td></tr>
     <tr><td class="left">Craven</td><td class="num">297/2400</td><td class="num">12.38 %</td><td class="num">4.31</td></tr>
     <tr><td class="left">Raoul</td><td class="num">151/2400</td><td class="num">6.29 %</td><td class="num">5.39</td></tr>
@@ -16,4 +16,5 @@
     <tr><td class="left">Mark P.</td><td class="num">64/2400</td><td class="num">2.67 %</td><td class="num">4.92</td></tr>
     <tr><td class="left">Zecks</td><td class="num">37/2400</td><td class="num">1.54 %</td><td class="num">4.35</td></tr>
     <tr><td class="left">Ale</td><td class="num">36/2400</td><td class="num">1.50 %</td><td class="num">6.17</td></tr>
+    <tr><td class="left">Velstadt</td><td class="num">3/2400</td><td class="num">0.13 %</td><td class="num">3.33</td></tr>
   </table>
